# ks-dhcpmon

./: .gitignore  Cargo.toml  HYBRID_DETECTION.md  README.md  config.toml  mac_os_mapping.toml  request.json
src/: dhcp.rs  fingerbase.rs  fingerprint.rs  hybrid_detection.rs  logger.rs  main.rs  smb.rs
src/db/: mod.rs  models.rs  queries.rs
src/static/: app.js  index.html  logs.css  logs.html  logs.js  styles.css
src/web/: handlers.rs  server.rs  state.rs
